fixed the gap in about-me section

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -69,6 +69,11 @@
   footer {
     height: 40vh;
   }
+
+  #about{
+    height: fit-content;
+  }
+
   #profile {
     height: 83vh;
     margin-bottom: 0;
